package cn.snwalker.design.creational.factory.abstractfactory;

/**
 * 颜色接口
 */
public interface Color {
    void fill();
}
