package cn.snwalker.design.creational.factory.abstractfactory;

/**
 * 形状接口
 */
public interface Shape {
    void draw();
}
